--- a/templates/_auth_ad.erb
+++ b/templates/_auth_ad.erb
@@ -1,7 +1,7 @@
 com.dtolabs.rundeck.jetty.jaas.JettyCachingLdapLoginModule <%= @active_directory_auth_flag %>
   debug="true"
   contextFactory="com.sun.jndi.ldap.LdapCtxFactory"
-  providerUrl="ldap://<%= @auth_config['active_directory']['server'] %>:<%= @auth_config['active_directory']['port'] %>"
+  providerUrl="<%= @auth_config['ldap']['use_ssl'] == true ? 'ldaps' : 'ldap' %>://<%= @auth_config['active_directory']['server'] %>:<%= @auth_config['active_directory']['port'] %>
   authenticationMethod="simple"
   forceBindingLogin="<%= @auth_config['active_directory']['force_binding'] %>"
   <%- if @auth_config['active_directory']['bind_dn'] -%>
