--- a/templates/_auth_ldap.erb
+++ b/templates/_auth_ldap.erb
@@ -1,20 +1,35 @@
 com.dtolabs.rundeck.jetty.jaas.JettyCachingLdapLoginModule <%= @ldap_auth_flag %>
   debug="true"
   contextFactory="com.sun.jndi.ldap.LdapCtxFactory"
-  providerUrl="ldap://<%= @auth_config['ldap']['server'] %>:<%= @auth_config['ldap']['port'] %>"
+  providerUrl="<%= @auth_config['ldap']['use_ssl'] ? 'ldaps' : 'ldap' %>://<%= @auth_config['ldap']['server'] %>:<%= @auth_config['ldap']['port'] %>"
   authenticationMethod="simple"
-  forceBindingLogin="<%= @auth_config['ldap']['force_binding'] %>"<% if @auth_config['ldap']['bind_dn'] %>
-  bindDn="CN=<%= @auth_config['ldap']['bind_dn']%>,<%= @auth_config['ldap']['user_base_dn'] %>"<% end %><% if @auth_config['ldap']['bind_password'] %>
-  bindPassword="<%= @auth_config['ldap']['bind_password']%>"<% end %>
+  forceBindingLogin="<%= @auth_config['ldap']['force_binding'] %>"
+  <%- if @auth_config['ldap']['bind_dn'] -%>
+  forceBindingLoginUseRootContextForRoles="<%= @auth_config['ldap']['force_binding_use_root'] %>"
+  bindDn="<%= @auth_config['ldap']['bind_dn']%>"
+  <%- end -%>
+  <%- if @auth_config['ldap']['bind_password'] -%>
+  bindPassword="<%= @auth_config['ldap']['bind_password']%>"
+  <%- end -%>
   userBaseDn="<%= @auth_config['ldap']['user_base_dn'] %>"
   userRdnAttribute="<%= @auth_config['ldap']['user_rdn_attribute'] %>"
   userIdAttribute="<%= @auth_config['ldap']['user_id_attribute'] %>"
+  userPasswordAttribute="<%= @auth_config['ldap']['user_password_attribute'] %>"
   userObjectClass="<%= @auth_config['ldap']['user_object_class'] %>"
   roleBaseDn="<%= @auth_config['ldap']['role_base_dn'] %>"
   roleNameAttribute="<%= @auth_config['ldap']['role_name_attribute'] %>"
+  roleObjectClass="<%= @auth_config['ldap']['role_object_class'] %>"
+  <%- if @auth_config['ldap']['role_members_are_dns'] -%>
   roleMemberAttribute="<%= @auth_config['ldap']['role_member_attribute'] %>"
-  roleObjectClass="<%= @auth_config['ldap']['role_object_class'] %>"<% if @auth_config['ldap']['supplemental_roles'] %>
-  supplementalRoles="<%= @auth_config['ldap']['supplemental_roles'] %>"<% end %>
+  <%- else -%>
+  roleUsernameMemberAttribute="<%= @auth_config['ldap']['role_member_attribute'] %>"
+  <%- end -%>
+  <%- if @auth_config['ldap']['role_prefix'] -%>
+  rolePrefix="<%= @auth_config['ldap']['role_prefix'] %>"
+  <%- end -%>
+  <%- if @auth_config['ldap']['supplemental_roles'] -%>
+  supplementalRoles="<%= @auth_config['ldap']['supplemental_roles'] %>"
+  <%- end -%>
   cacheDurationMillis="300000"
   reportStatistics="true"
   nestedGroups="<%= @auth_config['ldap']['nested_groups'] %>";
