INFRA-52 - bail entirely and just @acl_policies.to_yaml -- fingers crossed

--- a/templates/admin.aclpolicy.erb
+++ b/templates/admin.aclpolicy.erb
@@ -1,32 +1,1 @@
----
-<%- @acl_policies.each_with_index do |policy, index| -%>
-description: <%= policy['description'] %>
-context:
-  <%= policy['context']['type'] %>: '<%= policy['context']['rule'] %>'
-for:
-<%- policy['resource_types'].each do |resource| -%>
-  <%= resource['type'] %>:
-  <%- resource['rules'].each do |rule| -%>
-    - <%= rule['name'] %>:
-    <%- rule['rule'].each do |r| -%>
-      - '<%= r %>'
-    <%- end -%>
-  <%- end -%>
-<%- end -%>
-by:
-<%- if !policy['by']['groups'].nil? && policy['by']['groups'] != :undef -%>
-  group:
-  <%- policy['by']['groups'].each do |group| -%>
-   - '<%= group %>'
-  <%- end -%>
-<%- end -%>
-<%- if !policy['by']['usernames'].nil? && policy['by']['usernames'] != :undef -%>
-  username:
-  <%- policy['by']['usernames'].each do |username| -%>
-   - '<%= username %>'
-  <%- end -%>
-<%- end -%>
-<%- if index != (@acl_policies.length-1) -%>
----
-<%- end -%>
-<%- end -%>
+<%= @acl_policies.to_yaml %>
