--- a/templates/profile.erb
+++ b/templates/profile.erb
@@ -1,45 +1,70 @@
-RDECK_BASE=<%= @rdeck_base %>
-export RDECK_BASE
+RDECK_INSTALL="${RDECK_INSTALL:-/var/lib/rundeck}"
+#RDECK_BASE=<%= @rdeck_base %>
+RDECK_BASE="${RDECK_BASE:-/var/lib/rundeck}"
+RDECK_CONFIG="${RDECK_CONFIG:-/etc/rundeck}"
+RDECK_CONFIG_FILE="${RDECK_CONFIG_FILE:-$RDECK_CONFIG/rundeck-config.properties}"
+RDECK_SERVER_BASE="${RDECK_SERVER_BASE:-$RDECK_BASE}"
+RDECK_SERVER_CONFIG="${RDECK_SERVER_CONFIG:-$RDECK_CONFIG}"
+RDECK_SERVER_DATA="${RDECK_SERVER_DATA:-$RDECK_BASE/data}"
+RDECK_PROJECTS="${RDECK_PROJECTS:-$RDECK_BASE/projects}"
+RUNDECK_TEMPDIR="${RUNDECK_TEMPDIR:-/tmp/rundeck}"
+RUNDECK_WORKDIR="${RUNDECK_TEMPDIR:-$RDECK_BASE/work}"
+RUNDECK_LOGDIR="${RUNDECK_LOGDIR:-$RDECK_BASE/logs}"
+RDECK_JVM_SETTINGS="${RDECK_JVM_SETTINGS:- -Xmx1024m -Xms256m -XX:MaxMetaspaceSize=256m -server}"
+RDECK_TRUSTSTORE_FILE="${RDECK_TRUSTSTORE_FILE:-$RDECK_CONFIG/ssl/truststore}"
+RDECK_TRUSTSTORE_TYPE="${RDECK_TRUSTSTORE_TYPE:-jks}"
+JAAS_CONF="${JAAS_CONF:-$RDECK_CONFIG/jaas-loginmodule.conf}"
+LOGIN_MODULE="${LOGIN_MODULE:-RDpropertyfilelogin}"
+RDECK_HTTP_PORT=${RDECK_HTTP_PORT:-4440}
+RDECK_HTTPS_PORT=${RDECK_HTTPS_PORT:-4443}
 
-JAVA_CMD=java
 
-if [ ! -z $JAVA_HOME ]; then
-PATH=$PATH:$JAVA_HOME/bin
-export PATH
-JAVA_CMD=$JAVA_HOME/bin/java
+# If no JAVA_CMD, try to find it in $JAVA_HOME
+if [ -z "$JAVA_CMD" ] && [ -n "$JAVA_HOME" ] && [ -x "$JAVA_HOME/bin/java" ] ; then
+  JAVA_CMD=$JAVA_HOME/bin/java
+  PATH=$PATH:$JAVA_HOME/bin
+  export JAVA_HOME
+elif [ -z "$JAVA_CMD" ] ; then
+  JAVA_CMD=java
 fi
 
-export CLI_CP=$(find <%= @rdeck_base %>/cli -name \*.jar -printf %p:)
-export BOOTSTRAP_CP=$(find <%= @rdeck_base %>/bootstrap -name \*.jar -printf %p:)
-export RDECK_JVM="-Drdeck.config=<%= @properties_dir %> \
--Drdeck.base=<%= @rdeck_base %> \
--Drundeck.server.configDir=<%= @properties_dir %> \
--Dserver.datastore.path=<%= @rdeck_base %>/data \
--Drundeck.server.serverDir=<%= @rdeck_base %> \
--Drdeck.projects=<%= @projects_dir %> \
--Drdeck.runlogs=<%= @logs_dir %> \
--Drundeck.config.location=<%= @properties_dir %>/rundeck-config.groovy \
--Djava.security.auth.login.config=<%= @properties_dir %>/jaas-auth.conf \
--Dloginmodule.name=authentication"
+# build classpath without lone : that includes .
+for jar in $(find $RDECK_INSTALL/cli -name '*.jar') ; do
+  CLI_CP=${CLI_CP:+$CLI_CP:}$jar
+done
+for jar in $(find $RDECK_INSTALL/bootstrap -name '*.jar') ; do
+  BOOTSTRAP_CP=${BOOTSTRAP_CP:+$BOOTSTRAP_CP:}$jar
+done
 
-
-RDECK_JVM="$RDECK_JVM <%= @jvm_args %>"
-
-<% if @ssl_enabled %>
-export RDECK_JVM="$RDECK_JVM -Drundeck.ssl.config=<%= @properties_dir %>/ssl/ssl.properties -Dserver.https.port=<%= @ssl_port %>"
-<% end %>
-
-export RDECK_SSL_OPTS="-Djavax.net.ssl.trustStore=$RDECK_BASE/ssl/truststore -Djavax.net.ssl.trustStoreType=jks -Djava.protocol.handler.pkgs=com.sun.net.ssl.internal.www.protocol"
-
-if test -t 0 -a -z "$RUNDECK_CLI_TERSE"
-then
-RUNDECK_CLI_TERSE=true
-export RUNDECK_CLI_TERSE
+RDECK_JVM="-Djava.security.auth.login.config=$JAAS_CONF \
+           -Dloginmodule.name=$LOGIN_MODULE \
+           -Drdeck.config=$RDECK_CONFIG \
+           -Drundeck.server.configDir=$RDECK_SERVER_CONFIG \
+           -Dserver.datastore.path=$RDECK_SERVER_DATA/rundeck \
+           -Drundeck.server.serverDir=$RDECK_INSTALL \
+           -Drdeck.projects=$RDECK_PROJECTS \
+           -Drdeck.runlogs=$RUNDECK_LOGDIR \
+           -Drundeck.config.location=$RDECK_CONFIG_FILE \
+           -Djava.io.tmpdir=$RUNDECK_TEMPDIR \
+           -Drundeck.server.workDir=$RUNDECK_WORKDIR \
+           -Dserver.http.port=$RDECK_HTTP_PORT"
+#
+# Set min/max heap size
+#
+RDECK_JVM="$RDECK_JVM $RDECK_JVM_SETTINGS"
+#
+# SSL Configuration - Uncomment the following to enable.  Check SSL.properties for details.
+#
+#<% if @ssl_enabled %>
+if [ -n "$RUNDECK_WITH_SSL" ] ; then
+  RDECK_SSL_OPTS="${RDECK_SSL_OPTS:- -Djavax.net.ssl.trustStore=$RDECK_TRUSTSTORE_FILE -Djavax.net.ssl.trustStoreType=$RDECK_TRUSTSTORE_TYPE -Djava.protocol.handler.pkgs=com.sun.net.ssl.internal.www.protocol}"
+  RDECK_JVM="$RDECK_JVM -Drundeck.ssl.config=$RDECK_SERVER_CONFIG/ssl/ssl.properties -Dserver.https.port=${RDECK_HTTPS_PORT} ${RDECK_SSL_OPTS}"
 fi
+#<% end %>
 
-if test -n "$JRE_HOME"
-then
 unset JRE_HOME
-fi
 
 umask 002
+
+rundeckd="$JAVA_CMD $RDECK_JVM $RDECK_JVM_OPTS -cp $BOOTSTRAP_CP com.dtolabs.rundeck.RunServer $RDECK_BASE"
+#eof
