--- a/templates/_auth_ldap.erb
+++ b/templates/_auth_ldap.erb
@@ -1,11 +1,6 @@
 com.dtolabs.rundeck.jetty.jaas.<%= @ldap_login_module %> <%= @ldap_auth_flag %>
   debug="true"
   contextFactory="com.sun.jndi.ldap.LdapCtxFactory"
-<<<<<<< HEAD
-  providerUrl="<%= @auth_config['ldap']['use_ssl'] ? 'ldaps' : 'ldap' %>://<%= @auth_config['ldap']['server'] %>:<%= @auth_config['ldap']['port'] %>"
-||||||| merged common ancestors
-  providerUrl="ldap://<%= @auth_config['ldap']['server'] %>:<%= @auth_config['ldap']['port'] %>"
-=======
 <%-
 provider_url =
   if @auth_config['ldap']['url']
@@ -13,26 +8,11 @@ provider_url =
   else
     server = @auth_config['ldap']['server']
     port = @auth_config['ldap']['port']
-    "ldap://#{server}:#{port}"
+    (@auth_config['ldap']['use_ssl'] == true ? 'ldaps' : 'ldap') + "://#{server}:#{port}"
   end
 -%>
   providerUrl="<%= provider_url %>"
->>>>>>> 181220cef2093e007db5e1d8e8a5ecb424b407b5
   authenticationMethod="simple"
-<<<<<<< HEAD
-  forceBindingLogin="<%= @auth_config['ldap']['force_binding'] %>"
-  <%- if @auth_config['ldap']['bind_dn'] -%>
-  forceBindingLoginUseRootContextForRoles="<%= @auth_config['ldap']['force_binding_use_root'] %>"
-  bindDn="<%= @auth_config['ldap']['bind_dn']%>"
-  <%- end -%>
-  <%- if @auth_config['ldap']['bind_password'] -%>
-  bindPassword="<%= @auth_config['ldap']['bind_password']%>"
-  <%- end -%>
-||||||| merged common ancestors
-  forceBindingLogin="<%= @auth_config['ldap']['force_binding'] %>"<% if @auth_config['ldap']['bind_dn'] %>
-  bindDn="CN=<%= @auth_config['ldap']['bind_dn']%>,<%= @auth_config['ldap']['user_base_dn'] %>"<% end %><% if @auth_config['ldap']['bind_password'] %>
-  bindPassword="<%= @auth_config['ldap']['bind_password']%>"<% end %>
-=======
   forceBindingLogin="<%= @auth_config['ldap']['force_binding'] %>"
 <%- if @auth_config['ldap']['force_binding_use_root'] != :undef -%>
   forceBindingLoginUseRootContextForRoles="<%= @auth_config['ldap']['force_binding_use_root'] %>"
@@ -43,7 +23,6 @@ provider_url =
 <%- if @auth_config['ldap']['bind_password'] != :undef -%>
   bindPassword="<%= @auth_config['ldap']['bind_password']%>"
 <%- end -%>
->>>>>>> 181220cef2093e007db5e1d8e8a5ecb424b407b5
   userBaseDn="<%= @auth_config['ldap']['user_base_dn'] %>"
   userRdnAttribute="<%= @auth_config['ldap']['user_rdn_attribute'] %>"
   userIdAttribute="<%= @auth_config['ldap']['user_id_attribute'] %>"
@@ -54,32 +33,10 @@ provider_url =
 <%- end -%>
   roleBaseDn="<%= @auth_config['ldap']['role_base_dn'] %>"
   roleNameAttribute="<%= @auth_config['ldap']['role_name_attribute'] %>"
-<<<<<<< HEAD
-  roleObjectClass="<%= @auth_config['ldap']['role_object_class'] %>"
-  <%- if @auth_config['ldap']['role_members_are_dns'] -%>
-||||||| merged common ancestors
-=======
 <%- if @auth_config['ldap']['role_username_member_attribute'] -%>
   roleUsernameMemberAttribute="<%= @auth_config['ldap']['role_username_member_attribute'] %>"
 <%- elsif @auth_config['ldap']['role_member_attribute'] -%>
->>>>>>> 181220cef2093e007db5e1d8e8a5ecb424b407b5
   roleMemberAttribute="<%= @auth_config['ldap']['role_member_attribute'] %>"
-<<<<<<< HEAD
-  <%- else -%>
-  roleUsernameMemberAttribute="<%= @auth_config['ldap']['role_member_attribute'] %>"
-  <%- end -%>
-  <%- if @auth_config['ldap']['role_prefix'] -%>
-  rolePrefix="<%= @auth_config['ldap']['role_prefix'] %>"
-  <%- end -%>
-  <%- if @auth_config['ldap']['supplemental_roles'] -%>
-  supplementalRoles="<%= @auth_config['ldap']['supplemental_roles'] %>"
-  <%- end -%>
-  cacheDurationMillis="300000"
-||||||| merged common ancestors
-  roleObjectClass="<%= @auth_config['ldap']['role_object_class'] %>"<% if @auth_config['ldap']['supplemental_roles'] %>
-  supplementalRoles="<%= @auth_config['ldap']['supplemental_roles'] %>"<% end %>
-  cacheDurationMillis="300000"
-=======
 <%- end -%>
   roleObjectClass="<%= @auth_config['ldap']['role_object_class'] %>"
 <%- if @auth_config['ldap']['supplemental_roles'] != :undef -%>
@@ -94,7 +51,6 @@ cache_duration_ms =
   end
 -%>
   cacheDurationMillis="<%= cache_duration_ms  %>"
->>>>>>> 181220cef2093e007db5e1d8e8a5ecb424b407b5
   reportStatistics="true"
 <%- if @ldap_login_module == 'JettyCombinedLdapLoginModule' -%>
   ignoreRoles="true"
