--- a/templates/profile_overrides.erb
+++ b/templates/profile_overrides.erb
@@ -2,7 +2,7 @@ RDECK_BASE=<%= @rdeck_base %>
 RDECK_CONFIG=<%= @properties_dir %>
 RDECK_CONFIG_FILE=<%= @properties_dir %>/rundeck-config.groovy
 RDECK_INSTALL=<%= @rdeck_base %>
-JAAS_CONF=$RDECK_CONFIG/jaas-auth.conf
+JAAS_CONF=jaas-auth.conf
 LOGIN_MODULE=authentication
 JAVA_CMD=java
 RDECK_JVM_SETTINGS="<%= @jvm_args %>"
